--- a/src/component/League.css
+++ b/src/component/League.css
@@ -2,3 +2,10 @@ img{
     width : 100%;
     height : 250px;
 }
+.design{
+    display: grid;
+    grid-template-columns: 440px 440px 440px ;
+    margin-top: 10px;
+    grid-gap: 20px;
+    box-shadow: 10px grey;
+}
