--- a/src/component/League.css
+++ b/src/component/League.css
@@ -1,11 +1,10 @@
-img{
+.img{
     width : 100%;
     height : 250px;
 }
-.design{
+.design-imago{
     display: grid;
-    grid-template-columns: 440px 440px 440px ;
-    margin-top: 10px;
+    grid-template-columns: 33% 30% 30% ;
+    margin-left: 40px;
     grid-gap: 20px;
-    box-shadow: 10px grey;
 }
